Added placeholders on Index page
Added the place holder columns on the Index page for Info, Message, Book of the Day, and Today's Author

--- a/LibraryWebApp/Views/Home/Index.cshtml
+++ b/LibraryWebApp/Views/Home/Index.cshtml
@@ -2,7 +2,56 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="row">
+        <div class="col align-self-start border border-4 mlr-2 me-2">
+                <h3>Hours</h3>
+
+                <table>
+                    <tr><td>Monday</td><td>8:00am - 5:00pm</td></tr>
+                    <tr><td>Tusday</td><td>8:00am - 5:00pm</td></tr>
+                    <tr><td>Wednesday</td><td>8:00am - 5:00pm</td></tr>
+                    <tr><td>Thursday</td><td>8:00am - 5:00pm</td></tr>
+                    <tr><td>Friday</td><td>8:00am - 5:00pm</td></tr>
+                    <tr><td>Saturday</td><td>8:00am - 5:00pm</td></tr>
+                    <tr><td>Sunday</td><td>10:00am - 5:00pm</td></tr>
+                </table>
+                <br />
+                <div>
+                    <h3>Location</h3>
+                    <table class="p-0">
+                        <tr class="p-0 m-0"><td>123 Fake Street</td></tr>
+                        <tr class="p-0 m-0"><td>Nowhereville, Mo, 12345</td></tr>
+                    </table>
+                </div>
+                <br />
+                <div>
+                    <table>
+                        <tr><th><h3>Quick Contact</h3></th></tr>
+                        <tr><td><h4>Phone Number</h4></td></tr>
+                        <tr><td><p>(123) 456-7890</p></td></tr>
+                        <tr><td><h4>Email</h4></td></tr>
+                        <tr><td><p>RobBoss777@gmail.com</p></td></tr>
+                    </table>
+                </div>
+        </div>
+        <div class="col align-self-start border border-4 me-2">
+            <h3>A message to our community</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col align-self-start border border-4 mlr-2 me-2">
+            <h3>Book of the day</h3>
+            <p class="p-0">Title: Lorem Ipsum</p>
+            <p class="p-0">Author: Dolor sit Amet</p>
+            <img />
+            <p class="p-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col align-self-start border border-4 mlr-2 me-2">
+            <h3>Author Born Today</h3>
+            <p class="p-0">Name: Lorem Ipsum</p>
+            <p class="p-0">Date of Birth: 5/5/2022</p>
+            <img />
+            <p class="p-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
 </div>
