--- a/LibraryWebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryWebApp/Views/Shared/_Layout.cshtml
@@ -48,19 +48,19 @@
             <div class="collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav nav justify-content-center">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">My Page</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Ordering" asp-action="MyPage">My Page</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">Catalog</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Ordering" asp-action="Catalog">Catalog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">CheckOut</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Ordering" asp-action="CheckOut">CheckOut</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">Librarian Access</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Librarian" asp-action="LibrarianHome">Librarian Access</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">Administrator Access</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Administrator" asp-action="AdministratorHome">Administrator Access</a>
                     </li>
                 </ul>
             </div>
