--- a/LibraryWebApp/Views/Home/Register.cshtml
+++ b/LibraryWebApp/Views/Home/Register.cshtml
@@ -10,37 +10,65 @@
 @using (Html.BeginForm("login", "home", FormMethod.Post))
 {
     <form>
-        <div class="form-group">
-            <label for="Firstname">First Name</label>
-            @Html.TextBoxFor(m => m.FirstName, new { @AbandonedMutexException= "form-control", @placeholder = "First name"})
-            @Html.ValidationMessageFor(m=> m.FirstName, "", new {@class = "alert-danger"})
-        </div>
+        <div class="d-flex justify-content-center">
+            <table>
+                <th>
+                    <h3>Register</h3>
+                </th>
+                <tr>
+                    <td>
+                        <label for="Firstname">First Name</label>
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.FirstName, new { @AbandonedMutexException= "form-control", @placeholder = "First name"})
+                        @Html.ValidationMessageFor(m=> m.FirstName, "", new {@class = "alert-danger"})
+                    </td>
+                </tr>
 
-        <div class="form-group">
-            <label for="Lastname">Last Name</label>
-            @Html.TextBoxFor(m => m.LastName, new { @AbandonedMutexException= "form-control", @placeholder = "Last Name"})
-            @Html.ValidationMessageFor(m=> m.LastName, "", new {@class = "alert-danger"})
-        </div>
+                <tr>
+                    <td>
+                        <label for="Lastname">Last Name</label>
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.LastName, new { @AbandonedMutexException= "form-control", @placeholder = "Last Name"})
+                        @Html.ValidationMessageFor(m=> m.LastName, "", new {@class = "alert-danger"})
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="email">Email</label>
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.Email, new { @AbandonedMutexException= "form-control", @placeholder = "Email"})
+                        @Html.ValidationMessageFor(m=> m.Email, "", new {@class = "alert-danger"})
+                    </td>
+                </tr>
 
-        <div class="form-group">
-            <label for="email">Email</label>
-            @Html.TextBoxFor(m => m.Email, new { @AbandonedMutexException= "form-control", @placeholder = "Email"})
-            @Html.ValidationMessageFor(m=> m.Email, "", new {@class = "alert-danger"})
-        </div>
+                <tr>
+                    <td>
+                        <label for="Username">Username</label>
+                    </td>
+                    <td>
+                    @Html.TextBoxFor(m => m.Username, new { @AbandonedMutexException= "form-control", @placeholder = "enter your username"})
+                    @Html.ValidationMessageFor(m=> m.Username, "", new {@class = "alert-danger"})
+                    </td>
+                </tr>
 
-        <div class="form-group">
-            <label for="Username">Username</label>
-            @Html.TextBoxFor(m => m.Username, new { @AbandonedMutexException= "form-control", @placeholder = "enter your username"})
-            @Html.ValidationMessageFor(m=> m.Username, "", new {@class = "alert-danger"})
-        </div>
-
-        <div class="form-group">
-            <label for="name">Password</label>
-            @Html.TextBoxFor(m => m.Password, new { @AbandonedMutexException= "form-control", @placeholder = "enter your password"})
-            @Html.ValidationMessageFor(m=> m.Password, "", new {@class = "alert-danger"})
-        </div>
-        <div>
-            <input type="submit" value="submit" class="btn-primary btn-primary">
+                <tr>
+                    <td>
+                        <label for="name">Password</label>
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.Password, new { @AbandonedMutexException= "form-control", @placeholder = "enter your password"})
+                        @Html.ValidationMessageFor(m=> m.Password, "", new {@class = "alert-danger"})
+                    </td>
+                </tr>
+                <tfood>
+                    <td>
+                        <input type="submit" value="submit" class="btn-primary btn-primary">
+                    </td>
+                </tfood>
+            </table>
         </div>
     </form>
 }
