Added additional Projects
Added Unit Test, Database Access, Business logic, and Common projects to the solution.

--- a/LibraryWebApp/Views/Home/Register.cshtml
+++ b/LibraryWebApp/Views/Home/Register.cshtml
@@ -3,7 +3,7 @@
 *@
 @model LibraryWebApp.Models.RegisterModel
 @{
-    ViewData["Title"] = "Register Page";
+    ViewData["Title"] = "Register";
 }
 
 
