--- a/LibraryWebApp/Views/Home/Register.cshtml
+++ b/LibraryWebApp/Views/Home/Register.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-@using (Html.BeginForm("login", "home", FormMethod.Post))
+@using (Html.BeginForm("Register", "home", FormMethod.Post))
 {
     <form>
         <div class="d-flex justify-content-center">
@@ -65,7 +65,7 @@
                 </tr>
                 <tfood>
                     <td>
-                        <input type="submit" value="submit" class="btn-primary btn-primary">
+                        <input type="submit" value="Register" class="btn-primary btn-primary">
                     </td>
                 </tfood>
             </table>
