--- a/LibraryWebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryWebApp/Views/Shared/_Layout.cshtml
@@ -74,26 +74,30 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-                <div class="container-fluid">   
-                    <div class="d-sm-inline-flex justify-content-between">
-                        <ul class="navbar-nav nav justify-content-center justify-content-between gap-3">
-                            <li class="nav-item border rounded border-4">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">About Us</a>
-                            </li>
-                            <li class="nav-item border rounded border-4">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Careers</a>
-                            </li>
-                            <li class="nav-item border rounded border-4">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Donate</a>
-                            </li>
-                            <li class="nav-item border rounded border-4">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Contact Us</a>
-                            </li>
-                        </ul>
+        <div>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+                    <div class="container-fluid">  
+                        <div class="row align-items-start">
+                            <div class="d-sm-inline-flex justify-content-between">
+                                <ul class="navbar-nav nav justify-content-start justify-content-between gap-3">
+                                    <li class="nav-item border rounded border-4 col">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">About Us</a>
+                                    </li>
+                                    <li class="nav-item border rounded border-4 col">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Careers</a>
+                                    </li>
+                                    <li class="nav-item border rounded border-4 col">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Donate</a>
+                                    </li>
+                                    <li class="nav-item border rounded border-4 col">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+        </div>
         <div class="container">
             &copy; 2022 - LibraryWebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
