--- a/LibraryWebApp/Views/Home/Login.cshtml
+++ b/LibraryWebApp/Views/Home/Login.cshtml
@@ -1,54 +1,43 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model LibraryWebApp.Models.LoginModel
+﻿@model LibraryWebApp.Models.LoginModel
+
 @{
-    ViewData["Title"] = "Login Page";
+    ViewData["Title"] = "Login";
 }
 
+<h1>Login</h1>
 
-@using (Html.BeginForm("login", "home", FormMethod.Post))
+<hr />
+@using(Html.BeginForm())
 {
-    <form>
-        <div class="d-flex justify-content-center">
-        <table>
-            <th>
-                <h2>Login</h2>
-            </th>
-            <tr>
-                <td class="form-group">
-                    <label for="name">Username</label>
-                </td>
-                <td class="form-group">
-                    @Html.TextBoxFor(m => m.Username, new { @AbandonedMutexException= "form-control", @placeholder = "enter your username"})
-                    @Html.ValidationMessageFor(m=> m.Username, "", new {@class = "alert-danger"})
-                </td>
-            </tr>
-            <tr>
-                <td class="form-group">
-                    <label for="name">Password</label>
-                </td>
-                <td class="form-group">
-                    @Html.TextBoxFor(m => m.Password, new { @AbandonedMutexException= "form-control", @placeholder = "enter your password"})
-                    @Html.ValidationMessageFor(m=> m.Password, "", new {@class = "alert-danger"})
-                </td>
-            </tr>
-            <tfoot>
-                <tr>
-                    <td class="form-group">
-                        <a class="nav-link ps-0" asp-area="" asp-controller="Home" asp-action="Register">Forgot Password?</a>
-                    </td>
-                    <td class="form-group">
-                        <a class="nav-link ps-0" asp-area="" asp-controller="Home" asp-action="Register">Need an account? Register here.</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="form-group">
-                        <input type="submit" value="submit" class="btn-primary btn-primary">
-                    </td>
-                </tr>
-            </tfoot>
-        </table>
+    @Html.AntiForgeryToken()
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Login">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Username" class="control-label"></label>
+                    <input asp-for="Username" class="form-control" />
+                    <span asp-validation-for="Username" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+                <div class="form-group">
+                    <a class="nav-link ps-0" asp-area="" asp-controller="Home" asp-action="Register">Need an account? Register here.</a>
+                </div>
+            </form>
         </div>
-    </form>
+    </div>
+
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
+}
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
