--- a/LibraryWebApp/Views/Home/Register.cshtml
+++ b/LibraryWebApp/Views/Home/Register.cshtml
@@ -1,74 +1,73 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model LibraryWebApp.Models.RegisterModel
+﻿@model LibraryWebApp.Models.RegisterModel
+
 @{
     ViewData["Title"] = "Register";
 }
 
+<h1>Register</h1>
 
-@using (Html.BeginForm("Register", "home", FormMethod.Post))
+<hr />
+@using (Html.BeginForm())
 {
-    <form>
-        <div class="d-flex justify-content-center">
-            <table>
-                <th>
-                    <h3>Register</h3>
-                </th>
-                <tr>
-                    <td>
-                        <label for="Firstname">First Name</label>
-                    </td>
-                    <td>
-                        @Html.TextBoxFor(m => m.FirstName, new { @AbandonedMutexException= "form-control", @placeholder = "First name"})
-                        @Html.ValidationMessageFor(m=> m.FirstName, "", new {@class = "alert-danger"})
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <label for="Lastname">Last Name</label>
-                    </td>
-                    <td>
-                        @Html.TextBoxFor(m => m.LastName, new { @AbandonedMutexException= "form-control", @placeholder = "Last Name"})
-                        @Html.ValidationMessageFor(m=> m.LastName, "", new {@class = "alert-danger"})
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label for="email">Email</label>
-                    </td>
-                    <td>
-                        @Html.TextBoxFor(m => m.Email, new { @AbandonedMutexException= "form-control", @placeholder = "Email"})
-                        @Html.ValidationMessageFor(m=> m.Email, "", new {@class = "alert-danger"})
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <label for="Username">Username</label>
-                    </td>
-                    <td>
-                    @Html.TextBoxFor(m => m.Username, new { @AbandonedMutexException= "form-control", @placeholder = "enter your username"})
-                    @Html.ValidationMessageFor(m=> m.Username, "", new {@class = "alert-danger"})
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <label for="name">Password</label>
-                    </td>
-                    <td>
-                        @Html.TextBoxFor(m => m.Password, new { @AbandonedMutexException= "form-control", @placeholder = "enter your password"})
-                        @Html.ValidationMessageFor(m=> m.Password, "", new {@class = "alert-danger"})
-                    </td>
-                </tr>
-                <tfood>
-                    <td>
-                        <input type="submit" value="Register" class="btn-primary btn-primary">
-                    </td>
-                </tfood>
-            </table>
+    @Html.AntiForgeryToken()
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Register">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="row align-items-start">
+                    <div class="form-group col">
+                        <label asp-for="FirstName" class="control-label"></label>
+                        <input asp-for="FirstName" class="form-control" />
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col">
+                        <label asp-for="LastName" class="control-label"></label>
+                        <input asp-for="LastName" class="form-control" />
+                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row align-items-start">
+                    <div class="form-group col">
+                        <label asp-for="Email" class="control-label"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col">
+                        <label asp-for="ConfirmEmail" class="control-label"></label>
+                        <input asp-for="ConfirmEmail" class="form-control" />
+                        <span asp-validation-for="ConfirmEmail" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row align-items-start">
+                    <div class="form-group col">
+                        <label asp-for="Username" class="control-label"></label>
+                        <input asp-for="Username" class="form-control" />
+                        <span asp-validation-for="Username" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="row align-items-start">
+                    <div class="form-group col">
+                        <label asp-for="Password" class="control-label"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col">
+                        <label asp-for="ConfirmPassword" class="control-label"></label>
+                        <input asp-for="ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
         </div>
-    </form>
+    </div>
+}
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
