--- a/LibraryWebApp/Views/Home/Index.cshtml
+++ b/LibraryWebApp/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container">
+<div class="flex-container">
     <div class="row">
         <div class="col align-self-start border border-4 mlr-2 me-2" id="Info">
                 <h3>Hours</h3>
