--- a/LibraryWebApp/Views/Home/Login.cshtml
+++ b/LibraryWebApp/Views/Home/Login.cshtml
@@ -24,8 +24,8 @@
                     <input asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                <div class="form-group pt-2">
+                    <input type="submit" value="Login" class="btn btn-primary" />
                 </div>
                 <div class="form-group">
                     <a class="nav-link ps-0" asp-area="" asp-controller="Home" asp-action="Register">Need an account? Register here.</a>
