--- a/LibraryWebApp/Views/My_Page/Dashboard.cshtml
+++ b/LibraryWebApp/Views/My_Page/Dashboard.cshtml
@@ -1,3 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Dashboard";
 }
+
+<div>
+    <div class="form-group">
+        <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="Author">Author Dashboard</a>
+    </div>
+</div>
