Finished Create for Author
Completed the Create functionality for Author

--- a/LibraryWebApp/Views/My_Page/Author.cshtml
+++ b/LibraryWebApp/Views/My_Page/Author.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Author";
 }
 
-<div>
+<div class = "card">
     <div class="form-group">
-        <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="AddAuthor">Create a new Author</a>
+        <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="AddGenre">Create a new Genre</a>
     </div>
 </div>
