--- a/LibraryWebApp/Views/Home/Index.cshtml
+++ b/LibraryWebApp/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 
 <div class="flex-container">
-    <div class="row">
-        <div class="col align-self-start border border-4 mlr-2 me-2" id="Info">
+    <div class="card-group">
+        <div class="card" id="Info">
                 <h3>Hours</h3>
 
-                <table>
+                <table class="card-body">
                     <tr><td>Monday</td><td>8:00am - 5:00pm</td></tr>
                     <tr><td>Tusday</td><td>8:00am - 5:00pm</td></tr>
                     <tr><td>Wednesday</td><td>8:00am - 5:00pm</td></tr>
@@ -35,18 +35,18 @@
                     </table>
                 </div>
         </div>
-        <div class="col align-self-start border border-4 me-2" id="mssg">
+        <div class="card" id="mssg">
             <h3>A message to our community</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <div class="col align-self-start border border-4 mlr-2 me-2" id="BotD">
+        <div class="card" id="BotD">
             <h3>Book of the day</h3>
             <p class="p-0">Title: Lorem Ipsum</p>
             <p class="p-0">Author: Dolor sit Amet</p>
             <img />
             <p class="p-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <div class="col align-self-start border border-4 mlr-2 me-2" id="AoT">
+        <div class="card" id="AoT">
             <h3>Author Born Today</h3>
             <p class="p-0">Name: Lorem Ipsum</p>
             <p class="p-0">Date of Birth: 5/5/2022</p>
