--- a/LibraryWebApp/Views/Home/Register.cshtml
+++ b/LibraryWebApp/Views/Home/Register.cshtml
@@ -45,7 +45,7 @@
                         <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="row align-items-start">
+                <div class="row align-items-start input-group">
                     <div class="form-group col">
                         <label asp-for="Password" class="control-label"></label>
                         <input asp-for="Password" class="form-control" />
