--- a/LibraryWebApp/Views/My_Page/Dashboard.cshtml
+++ b/LibraryWebApp/Views/My_Page/Dashboard.cshtml
@@ -5,5 +5,6 @@
 <div>
     <div class="form-group">
         <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="Author">Author Dashboard</a>
+        <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="Genre">Genre Dashboard</a>
     </div>
 </div>
