--- a/LibraryWebApp/Views/My_Page/AddBook.cshtml
+++ b/LibraryWebApp/Views/My_Page/AddBook.cshtml
@@ -38,6 +38,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Genre" class="control-label"></label>
+                @Html.DropDownListFor(model => model.Genre, new SelectList(ViewBag.Genre, "GenreId","Name"), "-- Select Genre --", new {})
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
