Moved view links into single view
Moved AddAuthor, AddBook, AddGenre into a sub view called Librarian (Goal is for Sessions to decide what to display)

--- a/LibraryWebApp/Views/My_Page/Dashboard.cshtml
+++ b/LibraryWebApp/Views/My_Page/Dashboard.cshtml
@@ -4,8 +4,6 @@
 
 <div>
     <div class="form-group">
-        <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="Author">Author Dashboard</a>
-        <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="Genre">Genre Dashboard</a>
-        <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="Book">Book Dashboard</a>
+        <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="Librarian">Librarian Dashboard</a>
     </div>
 </div>
