--- a/LibraryWebApp/Views/My_Page/Author.cshtml
+++ b/LibraryWebApp/Views/My_Page/Author.cshtml
@@ -4,6 +4,6 @@
 
 <div class = "card">
     <div class="form-group">
-        <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="AddGenre">Create a new Genre</a>
+        <a class="nav-link ps-0" asp-area="" asp-controller="My_Page" asp-action="AddAuthor">Create a new Author</a>
     </div>
 </div>
