--- a/LibraryWebApp/Views/Home/Books.cshtml
+++ b/LibraryWebApp/Views/Home/Books.cshtml
@@ -1,3 +1,59 @@
-﻿@{
-    ViewData["Title"] = "Books Page";
+﻿@model LibraryWebApp.Models.BookCardDTO
+
+@{
+    ViewData["Title"] = "Books";
 }
+
+<h1>Books</h1>
+<hr />
+<div class="card-group">
+    @foreach(var bookcard in ViewBag.BookCards)
+    {
+        <div class="card-body">
+           <dl class="row">
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Title)
+            </dt>
+            <dd class = "col-sm-10">
+                @bookcard.Title
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+            <dd class = "col-sm-10">
+                @bookcard.Description
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.PublishDate)
+            </dt>
+            <dd class = "col-sm-10">
+                @bookcard.PublishDate
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.FirstName)
+            </dt>
+            <dd class = "col-sm-10">
+                @bookcard.FirstName
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.LastName)
+            </dt>
+            <dd class = "col-sm-10">
+                @bookcard.LastName
+            </dd>
+            <dt class = "col-sm-2">
+                Genre
+            </dt>
+            <dd class = "col-sm-10">
+                @bookcard.Name
+            </dd>
+            <dt class = "col-sm-2">Is it Fiction</dt>
+                @if(!bookcard.IsFiction) {<dd class = "col-sm-10">Fiction</dd>}
+                else {<dd class = "col-sm-10">Non-Fiction</dd>}
+        </dl> 
+    </div>
+    }
+</div>
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
